--- a/.github/workflows/build-book.yml
+++ b/.github/workflows/build-book.yml
@@ -26,7 +26,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build book --toc book/_toc.yml
+        jupyter-book build book
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
